working, although not complete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,11 @@
 
 .directions {
 		background-color: tan;
+		font-size: 19px;
 		font-weight: bold;
 		padding-top: 5px;
 		padding-bottom: 5px;
-		padding-left: 5px;
+		padding-left: 10px;
 		margin-top: 10px;
 		text-align: left;
 		margin-left: 10px;
@@ -35,26 +36,39 @@
 		height: 200px;
 		}
 
+.video {
+		float: right;
+		margin-top: -185px;
+		margin-right: 200px;
+		border: 3px solid black;
+		box-sizing: border-box;
+		
+		}
 
-.score {
+
+.goal {
 		background-color: green;
 		float: left;
    	 	clear: right;
-    	margin-top: 10px;
+    	margin-top: -330px;
     	margin-left: 10px;
 		margin-right: 950px;
     	height: 120px;
     	width: 275px;
     	padding-top: 10px;
-    	font-weight:bold
+    	padding-left: 10px;
+    	text-align: left;
+    	font-weight:bold;
+    	font-size: 30;
+
 		}
 
 .tally {
 		background-color: aqua;
 		float: right;
    	 	clear: left;
-    	margin-top: -130px;
-    	margin-right: 1120px;
+    	margin-top: -330px;
+    	margin-right: 1110px;
 		height: 110px;
     	width: 110px;
     	padding-top: 20px;
@@ -64,9 +78,9 @@
 		}
 .buttons {
 		position: static;
-		margin-top: 130px;
-    	margin-right: 1120px;
-    	margin-left: 0;
+		margin-top: 40px;
+    	margin-right: 0px;
+    	margin-left: -315px;
 		height: 20px;
     	width: 500px;
     	padding-top: 20px;
@@ -78,26 +92,32 @@
 		position: static;
 		background-color: teal;
 		margin-top: 100px;
-    	margin-right: 1120px;
-    	margin-left: 10;
-		height: 35px;
-    	width: 263px;
+    	margin-right: 0px;
+    	margin-left: -305px;
+		height: 30px;
+    	width: 275px;
     	padding-top: 5px;
     	padding-left: 10px;
     	text-align: left;
-    	line-height: 150%;
+    	line-height: 140%;
     	font-weight:bold;
+    	color: white;
 
 }
 
-.footer {
+.display {
 		position: absolute;
 		background-color: teal;
 		bottom: 10px;
     	margin-left: -10;
-		height: 120px;
+		height: 112px;
     	width: 275px;
-    	font-weight: bold;
+    	padding-top: 10px;
+    	padding-left: 10px;
+    	text-align: left;
+    	font-weight:bold;
+    	font-size: 30;
+    	color: white;
 
 }
 
